# z2dmp-rust

./: Cargo.toml  README.md  block1.test
.github/: build-and-release.yml
.github/workflows/: build-and-release.yml
src/: bytes.rs  function.rs  hexdump.rs  io.rs  lib.rs  logger.rs  main.rs  result.rs  trace.rs  zdmp.rs
